--- a/config/storage.yml
+++ b/config/storage.yml
@@ -2,6 +2,10 @@ test:
   service: Disk
   root: <%= Rails.root.join("tmp/storage") %>
 
+cloudinary:
+  service: Cloudinary # Disk #
+
+
 local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
