--- a/test/fixtures/skills.yml
+++ b/test/fixtures/skills.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  iconName: MyString
+  iconName: ruby.svg
   text: MyString
 
 two:
-  iconName: MyString
+  iconName: HTML.svg
   text: MyString
