config active storage and edit skills icons with cloudinary

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,9 +6,9 @@ cloudinary:
   service: Cloudinary # Disk #
 
 
-local:
-  service: Disk
-  root: <%= Rails.root.join("storage") %>
+# local:
+#   service: Cloudinary
+  # root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
