fix empty validates on skill model

--- a/config/storage.yml
+++ b/config/storage.yml
@@ -4,9 +4,9 @@ test:
 
 cloudinary:
   service: Cloudinary # Disk #
-  # cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
-  # api_key:    <%= ENV['CLOUDINARY_API_KEY'] %>
-  # api_secret: <%= ENV['CLOUDINARY_API_SECRET'] %>
+  cloud_name: <%= ENV['CLOUDINARY_CLOUD_NAME'] %>
+  api_key:    <%= ENV['CLOUDINARY_API_KEY'] %>
+  api_secret: <%= ENV['CLOUDINARY_API_SECRET'] %>
 
 # local:
 #   service: Cloudinary
